	  - Allow (Depends) 'apache-ssl' or 'apache2' in addition to 'apache' and 'httpd'.
	  - Recomend 'php4-idn'.
	  - Some (code) documentation updates.
	  - Add the file 'README.depends' which (very shortly) describes what's needed to get
	    phpQLAdmin working (software vice)...
	  - I've moved all schema files into the 'schemas' sub directory, all shell and perl
	    script examples into the sub directory 'scripts' and all README* files down to the
	    'doc' sub directory. This to remove some clutter from the main directory...
	    NOTE: I've done that on the cvs server level, so there's no commit logs that
		  indicate this. I did this so that I don't lose the logs (the only way to
		  move a file in cvs is to remove it and then add it in the new location -
		  you'll lose ALL logs when it's removed!).

	Schema changes
	  - Three new attributes for the phpQLAdminWebSrv object class:
	    webLDAPServer           1.3.6.1.4.1.8767.3.2.5.12
	    webLDAPServerLoginDN    1.3.6.1.4.1.8767.3.2.5.13
	    webLDAPServerLoginPW    1.3.6.1.4.1.8767.3.2.5.14

phpQLAdmin 2.1.2 Release (Nov 17 2004)
	Bug fixes
	  - De-globalization (in a LOT of places, to numeros to name!)
	  - The whole thing that deals with cloning a QmailLDAP/Control object was faulty.
	    It was never a FULL clone, just some 'randomly' choosen attributes (the ones
	    I've choosen to extract from the object to clone). Instead retreive the WHOLE
	    object, go through attributes and their value(s) and add the ones needed/wanted
	    to the resulting array.
	  - When cloning a QmailLDAP/Control object and 'include {locals,rcptHosts}' was
	    choosen AND if locals/rcptHosts contain the FQDN of the cloned server, replace
	    that with the FQDN of the new server.
	  - Fix config_ldap.php->LDAP Server Configuration->LDAP Object classes. Now folds
	    and unfolds the correct rows.
	  - Fix and improve ACI generation and deletion. Now works better than ever