@@ -43,7 +43,7 @@ if(isset($_REQUEST["msg"])) {
 // reload navigation bar if needed
 if(isset($_REQUEST["rlnb"]) and pql_get_define("PQL_CONF_AUTO_RELOAD")) {
 ?>
-  <script src="frames.js" type="text/javascript" language="javascript1.2"></script>
+  <script src="tools/frames.js" type="text/javascript" language="javascript1.2"></script>
   <script language="JavaScript1.2"><!--
 	// reload navigation frame
 	parent.frames.pqlnav.location.reload();
