@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>phpQL</title>
-	<link rel="stylesheet" href="../normal.css" type="text/css">
-	<!-- $Id: index.php,v 2.4 2005-01-12 14:53:55 turbo Exp $ -->
+	<link rel="stylesheet" href="../tools/normal.css" type="text/css">
+	<!-- $Id: index.php,v 2.5 2005-01-12 20:08:39 turbo Exp $ -->
 </head>
 
 <body bgcolor="#e7e7e7" background="../images/bkg.png">
