@@ -1,6 +1,6 @@
 <?php
 // shows details of a domain
-// $Id: domain_detail.php,v 2.88 2004-11-05 10:49:57 turbo Exp $
+// $Id: domain_detail.php,v 2.89 2005-01-12 20:08:39 turbo Exp $
 //
 session_start();
 require("./include/pql_config.inc");
@@ -24,7 +24,7 @@ if(isset($_REQUEST["msg"])) {
 // reload navigation bar if needed
 if(isset($_REQUEST["rlnb"]) and pql_get_define("PQL_CONF_AUTO_RELOAD")) {
 ?>
-  <script src="frames.js" type="text/javascript" language="javascript1.2"></script>
+  <script src="tools/frames.js" type="text/javascript" language="javascript1.2"></script>
   <script language="JavaScript1.2"><!--
 	// reload navigation frame
 	parent.frames.pqlnav.location.reload();
