@@ -1,5 +1,5 @@
 <?php
-// $Id: ezmlm_detail.php,v 1.28 2004-10-18 13:39:30 turbo Exp $
+// $Id: ezmlm_detail.php,v 1.29 2005-01-12 20:08:39 turbo Exp $
 //
 session_start();
 require("./include/pql_config.inc");
@@ -32,7 +32,7 @@ if($_REQUEST["domain"]) {
 	// reload navigation bar if needed
 	if(isset($_REQUEST["rlnb"]) and pql_get_define("PQL_CONF_AUTO_RELOAD")) {
 ?>
-  <script src="frames.js" type="text/javascript" language="javascript1.2"></script>
+  <script src="tools/frames.js" type="text/javascript" language="javascript1.2"></script>
   <script language="JavaScript1.2"><!--
 	// reload navigation frame
 	parent.frames.pqlnavezmlm.location.reload();
