@@ -1,6 +1,6 @@
 <?php
 // shows results of search
-// $Id: search.php,v 2.28 2004-11-17 07:30:06 turbo Exp $
+// $Id: search.php,v 2.29 2005-01-12 20:08:39 turbo Exp $
 //
 session_start();
 require("./include/pql_config.inc");
@@ -15,7 +15,7 @@ if(isset($msg)) {
 // reload navigation bar if needed
 if(isset($_REQUEST["rlnb"]) and pql_get_define("PQL_CONF_AUTO_RELOAD")) {
 ?>
-  <script src="frames.js" type="text/javascript" language="javascript1.2"></script>
+  <script src="tools/frames.js" type="text/javascript" language="javascript1.2"></script>
   <script language="JavaScript1.2"><!--
     // reload navigation frame
     refreshFrames();
