@@ -1,7 +1,7 @@
   <table cellspacing="0" cellpadding="3" border="0">
     <th align="left"><?=$LANG->_('Actions')?></th>
       <tr class="subtitle">
-        <td colspan="4"><a href="installmailserver.php?domain=<?=$domain?>&mxhost=<?=$_REQUEST["mxhost"]?>"><img src="images/edit.png" width="12" height="12" border="0"><?=$LANG->_('Create mailserver install script')?></a></td>
+        <td colspan="4"><a href="tools/installmailserver.php?domain=<?=$domain?>&mxhost=<?=$_REQUEST["mxhost"]?>"><img src="images/edit.png" width="12" height="12" border="0"><?=$LANG->_('Create mailserver install script')?></a></td>
       </tr>
 
       <tr class="<?php pql_format_table(); ?>">
